cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_26305_negative4.json
{
  "Resources": {
    "Negative2SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for negative test cases",
        "VpcId": { "Ref": "MyVPC" }
      }
    },
    "Negative2IPv4Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "Negative2SecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Negative2IPv4Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "Negative2SecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 0,
        "ToPort": 6000,
        "CidrIp": "192.0.0.0/16"
      }
    },
    "Negative2IPv4Ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "Negative2SecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIp": "192.120.0.0/16"
      }
    },
    "Negative2IPv6Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "Negative2SecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 3389,
        "ToPort": 3389,
        "CidrIpv6": "::/0"
      }
    },
    "Negative2IPv6Ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "Negative2SecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 0,
        "ToPort": 6000,
        "CidrIpv6": "2400:cb00::/32"
      }
    },
    "Negative2IPv6Ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "Negative2SecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 3389,
        "ToPort": 3389,
        "CidrIpv6": "2400:cb00::/32"
      }
    }
  }
}
